# litex-rkbmt

./: .gitignore  flake.nix  justfile  license  overlay.nix  pyproject.toml  readme.md
demo/: calc.c  main.c  makefile
litex/: justfile  readme.md
litex/ba/: ba_core.h  ba_types.h  build.py  main.c  makefile  test.c  test_data.h
litex/demo/: main.c  makefile  readme.md
qemu/: justfile  readme.md
qemu/t1/: .gdb_history  .gdbinit  linker.ld  makefile
qemu/t1/src/: startup.S
qemu/t2/: .gdbinit  linker.ld  makefile
qemu/t2/src/: main.c  startup.S  uart.h
qemu/t4/: .gdb_history  makefile
qemu/t4/src/: main.c  startup.S  uart.h
